# receipt-ocr-reader

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
eval/: DATASET.md  download_sroie.py  run_eval.py
reports/: eval_easyocr_50.json  eval_gt_words.json
src/ocr/: engine.py  extract.py  preprocess.py  schema.py
tests/: test_api.py  test_extract.py  test_preprocess.py  test_schema.py
