[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-ocr-reader"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7",
    "opencv-python-headless>=4.8",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "gradio>=4.0",
    "pandas>=2.0",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-anyio>=0.0.0", "ruff>=0.3", "httpx>=0.27", "anyio>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
